--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 <div id="controls">
     <a href="#" id="about" class="btn btn-lg btn-default">About</a><br/><br/>
 
-    <div class="sliderInput" id="creaseAngle">
+    <div class="sliderInput" id="creasePercent">
         <span class="label-slider">Crease Angle : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control int" type="text">
     </div>
