--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
     <script type="text/javascript" src="dependencies/underscore-min.js"></script>
     <script type="text/javascript" src="dependencies/FileSaver.min.js"></script>
     <script type="text/javascript" src="dependencies/SVGLoader.js"></script>
+    <script type="text/javascript" src="dependencies/path-data-polyfill.js"></script>
 
     <script type="text/javascript" src="js/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/GPUMath.js"></script>
@@ -271,7 +272,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="loadFile" href="#">Import SVG...</a></li>
                     <li class="divider"></li>
-                    <li><a id="saveSVG" href="#">Save Pattern as SVG</a></li>
+                    <li><a id="saveSVG" href="#">Save Pattern as SVG...</a></li>
                     <li><a id="exportSTL" href="#">Save Simulation as STL...</a></li>
                 </ul>
             </li>
