--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
     <script type="text/javascript" src="dependencies/FileSaver.min.js"></script>
     <script type="text/javascript" src="dependencies/SVGLoader.js"></script>
     <script type="text/javascript" src="dependencies/path-data-polyfill.js"></script>
+    <script type="text/javascript" src="dependencies/earcut.js"></script>
 
     <script type="text/javascript" src="js/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/GPUMath.js"></script>
