--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             vec3 lastPosition = texture2D(u_lastPosition, scaledFragCoord).xyz;
             vec3 velocity = texture2D(u_velocity, scaledFragCoord).xyz;
             vec3 position = velocity*u_dt + lastPosition;
-            gl_FragColor = vec4(position,0.0);
+            gl_FragColor = vec4(position, 0.0);
         }
     </script>
 
@@ -122,7 +122,7 @@
             vec2 scaledFragCoord = fragCoord/u_textureDim;
 
             vec2 mass = texture2D(u_mass, scaledFragCoord).xy;
-            if (mass.y == 1.0){
+            if (mass.y == 1.0){//fixed
                 gl_FragColor = vec4(0.0);
                 return;
             }
@@ -154,7 +154,7 @@
                 deltaP -= normalize(deltaP)*beamMeta[2];
                 vec3 deltaV = neighborLastVelocity-lastVelocity;
 
-                vec3 _force = deltaP*beamMeta[0] + deltaV*beamMeta[1];
+                vec3 _force = deltaP*beamMeta[0];// + deltaV*beamMeta[1];
                 force += _force;
             }
 
@@ -183,7 +183,7 @@
                 vec2 scaledNormalsIndex = normalsIndex/u_textureDimFaces;
                 vec3 normal = texture2D(u_normals, scaledNormalsIndex).xyz;
 
-                float angForce = creaseMeta[0]*(targetTheta-thetas[0]) + creaseMeta[1]*thetas[1];;
+                float angForce = creaseMeta[0]*(targetTheta-thetas[0]);// + creaseMeta[1]*thetas[1];
                 float momentArm = creaseMeta2[1];
 
                 vec3 _force = angForce/momentArm*normal;
@@ -330,7 +330,7 @@
 </div>
 <div id="controls">
     <div class="sliderInput" id="creasePercent">
-        <span class="label-slider">Crease Angle : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <span class="label-slider">Crease Percent : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
         <input value="" placeholder="" class="form-control int" type="text">
     </div>
     <br/><br/><br/>
