--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
             vec2 fragCoord = gl_FragCoord.xy;
             vec2 scaledFragCoord = fragCoord/u_textureDim;
 
+            vec3 lastPosition = texture2D(u_lastPosition, scaledFragCoord).xyz;
+
             float isFixed = texture2D(u_mass, scaledFragCoord).y;
             if (isFixed == 1.0){
-                gl_FragColor = vec4(0.0);
+                gl_FragColor = vec4(lastPosition, 0.0);
                 return;
             }
 
-            vec3 lastPosition = texture2D(u_lastPosition, scaledFragCoord).xyz;
             vec3 velocity = texture2D(u_velocity, scaledFragCoord).xyz;
             vec3 position = velocity*u_dt + lastPosition;
             gl_FragColor = vec4(position, 0.0);
@@ -122,7 +123,7 @@
             vec2 scaledFragCoord = fragCoord/u_textureDim;
 
             vec2 mass = texture2D(u_mass, scaledFragCoord).xy;
-            if (mass.y == 1.0){//fixed
+            if (mass[1] == 1.0){//fixed
                 gl_FragColor = vec4(0.0);
                 return;
             }
